tests/NormalTests/paczka1/fuzzy1/20421627.err
Error in line 2: U6AzNaN A959 97,0
Error in line 4: 7xhxlANnyT A959 2,0
Error in line 9: U6AzNaN S884 97,1
Error in line 10: U6AzNaN A565 50,1
Error in line 12: S884 S884 77,52
Error in line 7: ArA5VFjD S851 94,8
Error in line 16: DnJSDx S851 83,4
Error in line 30: DnJSDx A959 8,9
Error in line 31: ArA5VFjD A959 4,9
